Bug fixes, optimization, UI fixes and cleanup.

--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,54 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 # Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-.venv/
-
-# Node
-frontend/node_modules/
-frontend/dist/
-frontend/.vite/
-
-# Environment
-.env
-.DS_Store
-
-# Coverage / reports
-coverage/
-frontend/coverage/
-playwright-report/
-test-results/
-# Python / Django
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
-db.sqlite3
-*.log
-*.pot
-*.pyc
-*.pyc
-.env
-.venv
 env/
 venv/
 ENV/
-env.bak/
-venv.bak/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# OS - Mac
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+staticfiles/
+media/
 
-# Docker
-postgres_data/
-*.pid
-*.seed
-*.pid.lock
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# Frontend
-frontend/node_modules/
+# Frontend build
 frontend/dist/
 frontend/build/
-frontend/.vite/
-frontend/.env
-frontend/.env.local
-frontend/.env.production
+.vite/
+*.local
 
 # IDE
 .vscode/
@@ -68,23 +56,24 @@ frontend/.env.production
 *.swp
 *.swo
 *~
-
-# Logs
-*.log
-backend/logs/*.log
-!backend/logs/.gitkeep
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.DS_Store
 
 # Testing
 .coverage
-.coverage.*
 htmlcov/
 .pytest_cache/
-.tox/
+coverage/
+.nyc_output/
+*.cover
 
-# Production
-*.pem
-*.key
-*.crt
+# Docker
+docker-compose.override.yml
+
+# Logs
+logs/
+*.log
+
+# Backup files
+*.bak
+*.backup
+*.sql
