Add multi-faceted search engine with PostGIS distance-based filtering
Implement Strategy Pattern for service search with LocationStrategy,
TagStrategy, TextStrategy, and TypeStrategy filters. Enable PostGIS
for geospatial queries and add distance slider to Dashboard UI.

Changes:
- Enable PostGIS in docker-compose.yml and docker-compose.prod.yml
- Add GDAL dependencies to backend Dockerfile
- Add PointField to Service model with auto-population from lat/lng
- Implement SearchEngine with modular filter strategies
- Add distance-based search UI with location toggle and slider
- Update API to support lat/lng/distance query parameters
- Add comprehensive test suite (32 tests) for search filters

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,9 +5,19 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /code
 
+# Install system dependencies including GDAL for PostGIS support
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends curl \
+    && apt-get install -y --no-install-recommends \
+        curl \
+        gdal-bin \
+        libgdal-dev \
+        libgeos-dev \
+        libproj-dev \
     && rm -rf /var/lib/apt/lists/*
+
+# Set GDAL environment variables
+ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
+ENV C_INCLUDE_PATH=/usr/include/gdal
 
 COPY requirements.txt /code/
 RUN pip install --no-cache-dir -r requirements.txt
