--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,7 +75,7 @@ services:
         max-file: "3"
 
   db:
-    image: postgres:15
+    image: postgis/postgis:15-3.4
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
