--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: Dockerfile
     command: >
       daphne -b 0.0.0.0 -p 8000 hive_project.asgi:application
+    volumes:
+      - media_data:/code/media
     ports:
       - "${BACKEND_PORT:-8000}:8000"
     depends_on:
@@ -130,4 +132,5 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  media_data:
 
