--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     command: daphne -b 0.0.0.0 -p 8000 hive_project.asgi:application
     volumes:
       - ./backend:/code
+      - media_data:/code/media
     ports:
       - "8000:8000"
     depends_on:
@@ -51,3 +52,4 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  media_data:
