Testing suite, general fixes, code review and cleanup, badges are removed now they are achievements, standardize error handling, type hints, refactoring, monitoring, demo script changes, deployment config changes.

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,11 @@ htmlcov/
 coverage/
 .nyc_output/
 *.cover
+.hypothesis/
+**/tests/reports/
+test-results/
+playwright-report/
+*.plan.md
 
 # Docker
 docker-compose.override.yml
@@ -79,5 +84,3 @@ logs/
 *.bak
 *.backup
 *.sql
-
-.cursorrules
