--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,7 +58,9 @@
     "@testing-library/user-event": "^14.0.0",
     "@types/node": "^20.10.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/ui": "^1.6.1",
     "jsdom": "^24.0.0",
+    "msw": "^2.0.0",
     "vite": "^6.4.1",
     "vitest": "^1.0.0"
   },
@@ -69,8 +71,11 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:ui": "vitest --ui",
+    "test:unit": "vitest run --reporter=verbose",
+    "test:integration": "vitest run --reporter=verbose",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug"
   }
 }
