--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,13 @@ DEBUG=False
 ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
 CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
+# Throttling (optional)
+# If you have a small/private deployment and want to avoid occasional "Request was throttled" messages:
+# - THROTTLE_RELAXED keeps throttling enabled but raises limits significantly.
+# - DISABLE_THROTTLING disables throttling entirely (use carefully).
+THROTTLE_RELAXED=True
+DISABLE_THROTTLING=False
+
 # Frontend Configuration
 VITE_API_URL=https://yourdomain.com/api
 FRONTEND_PORT=5173
