--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^6.30.2",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "*",
@@ -58,6 +59,7 @@
     "@testing-library/user-event": "^14.0.0",
     "@types/node": "^20.10.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/coverage-v8": "^1.6.1",
     "@vitest/ui": "^1.6.1",
     "jsdom": "^24.0.0",
     "msw": "^2.0.0",
