Dockerfile.prod update

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -4,12 +4,20 @@ FROM python:3.11-slim as builder
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including GDAL for PostGIS/GeoDjango
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
     libpq-dev \
+    gdal-bin \
+    libgdal-dev \
+    libgeos-dev \
+    libproj-dev \
     && rm -rf /var/lib/apt/lists/*
+
+# Set GDAL environment variables for pip install
+ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
+ENV C_INCLUDE_PATH=/usr/include/gdal
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
@@ -20,12 +28,20 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install only runtime dependencies
+# Install runtime dependencies including GDAL for GeoDjango
 RUN apt-get update && apt-get install -y \
     postgresql-client \
     libpq-dev \
     curl \
+    gdal-bin \
+    libgdal-dev \
+    libgeos-dev \
+    libproj-dev \
     && rm -rf /var/lib/apt/lists/*
+
+# Set GDAL environment variables
+ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
+ENV C_INCLUDE_PATH=/usr/include/gdal
 
 # Copy Python dependencies from builder
 COPY --from=builder /root/.local /root/.local
