--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,9 +2,9 @@
 # Stage 1: Build dependencies
 FROM python:3.11-slim as builder
 
-WORKDIR /app
+WORKDIR /build
 
-# Install system dependencies including GDAL for PostGIS/GeoDjango
+# Install build dependencies including GDAL for PostGIS/GeoDjango
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
@@ -19,14 +19,18 @@ RUN apt-get update && apt-get install -y \
 ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
 ENV C_INCLUDE_PATH=/usr/include/gdal
 
-# Copy requirements and install Python dependencies
+# Copy requirements and install Python dependencies globally
 COPY requirements.txt .
-RUN pip install --user --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Stage 2: Production image
 FROM python:3.11-slim
 
-WORKDIR /app
+# Use /code for consistency with dev Dockerfile and settings.py
+WORKDIR /code
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # Install runtime dependencies including GDAL for GeoDjango
 RUN apt-get update && apt-get install -y \
@@ -43,32 +47,24 @@ RUN apt-get update && apt-get install -y \
 ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
 ENV C_INCLUDE_PATH=/usr/include/gdal
 
-# Copy Python dependencies from builder
-COPY --from=builder /root/.local /root/.local
-
-# Make sure scripts in .local are usable
-ENV PATH=/root/.local/bin:$PATH
+# Copy Python dependencies from builder (installed globally in /usr/local)
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
 
 # Copy application code
-COPY . .
+COPY . /code/
 
-# Create logs directory and non-root user for security
-RUN mkdir -p /app/logs && \
-    useradd -m -u 1000 appuser && \
-    chown -R appuser:appuser /app
-
-# Switch to non-root user
-USER appuser
+# Create logs and media directories, make entrypoint executable
+RUN mkdir -p /code/logs /code/media && \
+    chmod +x /code/entrypoint.sh
 
 # Expose port
 EXPOSE 8000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8000/api/health/ || exit 1
 
-# Run migrations and start server
-CMD python manage.py wait_for_db && \
-    python manage.py migrate --noinput && \
-    python manage.py collectstatic --noinput && \
-    daphne -b 0.0.0.0 -p 8000 hive_project.asgi:application
+# Use entrypoint to run migrations, then exec the command
+ENTRYPOINT ["/code/entrypoint.sh"]
+CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "hive_project.asgi:application"]
