--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,9 +2,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
-    command: >
-      daphne -b 0.0.0.0 -p 8000 hive_project.asgi:application
+      dockerfile: Dockerfile.prod
     volumes:
       - media_data:/code/media
     ports:
